bin/grammar.output
Grammar

    0 $accept: program $end

    1 program: functions
    2        | declarations functions

    3 declarations: declaration
    4             | declarations declaration

    5 declaration: var_type var_decl SEMICOLON
    6            | struct_declaration SEMICOLON

    7 var_decl: simple_declaration
    8         | assignment
    9         | var_decl COMMA var_decl

   10 simple_declaration: %empty
   11                   | identifier

   12 struct_declaration: STRUCT identifier O_CURLY_BRACES declarations C_CURLY_BRACES var_decl

   13 inizialization_list: identifier
   14                    | const
   15                    | STRCONST
   16                    | O_CURLY_BRACES inizialization_list COMMA inizialization_list C_CURLY_BRACES
   17                    | inizialization_list COMMA inizialization_list

   18 functions: func_definition
   19          | functions func_definition

   20 func_definition: var_type identifier O_ROUND_BRACES argument_list C_ROUND_BRACES O_CURLY_BRACES body C_CURLY_BRACES

   21 argument_list: %empty
   22              | VOID
   23              | parameter_list

   24 parameter_list: parameter_declaration
   25               | parameter_list COMMA parameter_declaration

   26 parameter_declaration: var_type identifier

   27 body: statements
   28     | declarations statements

   29 statements: statement
   30           | statements statement

   31 statement: SEMICOLON
   32          | func_call SEMICOLON
   33          | assignment SEMICOLON
   34          | increment SEMICOLON
   35          | printf_stat SEMICOLON
   36          | scanf_stat SEMICOLON
   37          | if_stat
   38          | for_stat
   39          | return_stat SEMICOLON

   40 func_call: identifier O_ROUND_BRACES call_args C_ROUND_BRACES

   41 call_args: %empty
   42          | identifier
   43          | call_args COMMA identifier

   44 assignment: identifier ASSIGN word
   45           | identifier ASSIGN expr
   46           | identifier ASSIGN O_CURLY_BRACES inizialization_list C_CURLY_BRACES
   47           | identifier ASSIGN func_call

   48 expr: expr ADD expr
   49     | expr SUB expr
   50     | expr TIMES expr
   51     | expr DIVIDE expr
   52     | SUB expr
   53     | increment
   54     | expr EQOP expr
   55     | expr RELOP expr
   56     | expr AND expr
   57     | expr OR expr
   58     | NOT expr
   59     | O_ROUND_BRACES expr C_ROUND_BRACES
   60     | number
   61     | identifier

   62 increment: identifier INCR

   63 printf_stat: PRINTF O_ROUND_BRACES word C_ROUND_BRACES
   64            | PRINTF O_ROUND_BRACES STRCONST COMMA printed_var C_ROUND_BRACES

   65 printed_var: identifier
   66            | printed_var COMMA identifier

   67 scanf_stat: SCANF O_ROUND_BRACES STRCONST COMMA retrieved_var C_ROUND_BRACES

   68 retrieved_var: E_COMM identifier
   69              | retrieved_var COMMA E_COMM identifier

   70 if_stat: IF O_ROUND_BRACES expr C_ROUND_BRACES block
   71        | IF O_ROUND_BRACES expr C_ROUND_BRACES block ELSE block

   72 block: statement
   73      | O_CURLY_BRACES statements C_CURLY_BRACES

   74 for_stat: FOR O_ROUND_BRACES init_for SEMICOLON expr SEMICOLON incr_for C_ROUND_BRACES block

   75 init_for: %empty
   76         | assignment
   77         | init_for COMMA init_for

   78 incr_for: expr
   79         | incr_for COMMA expr

   80 return_stat: RETURN
   81            | RETURN const
   82            | RETURN identifier

   83 var_type: VOID
   84         | INT
   85         | FLOAT
   86         | CHAR
   87         | STRUCT identifier

   88 identifier: IDENTIFIER
   89           | identifier O_SQUARE_BRACES ICONST C_SQUARE_BRACES
   90           | identifier O_SQUARE_BRACES identifier C_SQUARE_BRACES
   91           | identifier DOT identifier

   92 const: ICONST
   93      | FCONST
   94      | CCONST

   95 word: CCONST
   96     | STRCONST

   97 number: ICONST
   98       | FCONST


Terminals, with rules where they appear

$end (0) 0
error (256)
O_CURLY_BRACES (258) 12 16 20 46 73
C_CURLY_BRACES (259) 12 16 20 46 73
O_SQUARE_BRACES (260) 89 90
C_SQUARE_BRACES (261) 89 90
O_ROUND_BRACES (262) 20 40 59 63 64 67 70 71 74
C_ROUND_BRACES (263) 20 40 59 63 64 67 70 71 74
DOT (264) 91
COMMA (265) 9 16 17 25 43 64 66 67 69 77 79
SEMICOLON (266) 5 6 31 32 33 34 35 36 39 74
E_COMM (267) 68 69
ASSIGN (268) 44 45 46 47
ADD (269) 48
SUB (270) 49 52
TIMES (271) 50
DIVIDE (272) 51
INCR (273) 62
EQOP (274) 54
RELOP (275) 55
AND (276) 56
OR (277) 57
NOT (278) 58
IF (279) 70 71
ELSE (280) 71
FOR (281) 74
PRINTF (282) 63 64
SCANF (283) 67
IDENTIFIER (284) 88
RETURN (285) 80 81 82
VOID (286) 22 83
INT (287) 84
FLOAT (288) 85
CHAR (289) 86
STRUCT (290) 12 87
ICONST (291) 89 92 97
FCONST (292) 93 98
CCONST (293) 94 95
STRCONST (294) 15 64 67 96
IFX (295)
REV (296)


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
program (43)
    on left: 1 2, on right: 0
declarations (44)
    on left: 3 4, on right: 2 4 12 28
declaration (45)
    on left: 5 6, on right: 3 4
var_decl (46)
    on left: 7 8 9, on right: 5 9 12
simple_declaration (47)
    on left: 10 11, on right: 7
struct_declaration (48)
    on left: 12, on right: 6
inizialization_list (49)
    on left: 13 14 15 16 17, on right: 16 17 46
functions (50)
    on left: 18 19, on right: 1 2 19
func_definition (51)
    on left: 20, on right: 18 19
argument_list (52)
    on left: 21 22 23, on right: 20
parameter_list (53)
    on left: 24 25, on right: 23 25
parameter_declaration (54)
    on left: 26, on right: 24 25
body (55)
    on left: 27 28, on right: 20
statements (56)
    on left: 29 30, on right: 27 28 30 73
statement (57)
    on left: 31 32 33 34 35 36 37 38 39, on right: 29 30 72
func_call (58)
    on left: 40, on right: 32 47
call_args (59)
    on left: 41 42 43, on right: 40 43
assignment (60)
    on left: 44 45 46 47, on right: 8 33 76
expr (61)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61, on right: 45
    48 49 50 51 52 54 55 56 57 58 59 70 71 74 78 79
increment (62)
    on left: 62, on right: 34 53
printf_stat (63)
    on left: 63 64, on right: 35
printed_var (64)
    on left: 65 66, on right: 64 66
scanf_stat (65)
    on left: 67, on right: 36
retrieved_var (66)
    on left: 68 69, on right: 67 69
if_stat (67)
    on left: 70 71, on right: 37
block (68)
    on left: 72 73, on right: 70 71 74
for_stat (69)
    on left: 74, on right: 38
init_for (70)
    on left: 75 76 77, on right: 74 77
incr_for (71)
    on left: 78 79, on right: 74 79
return_stat (72)
    on left: 80 81 82, on right: 39
var_type (73)
    on left: 83 84 85 86 87, on right: 5 20 26
identifier (74)
    on left: 88 89 90 91, on right: 11 12 13 20 26 40 42 43 44 45 46
    47 61 62 65 66 68 69 82 87 89 90 91
const (75)
    on left: 92 93 94, on right: 14 81
word (76)
    on left: 95 96, on right: 44 63
number (77)
    on left: 97 98, on right: 60


State 0

    0 $accept: . program $end
    1 program: . functions
    2        | . declarations functions
    3 declarations: . declaration
    4             | . declarations declaration
    5 declaration: . var_type var_decl SEMICOLON
    6            | . struct_declaration SEMICOLON
   12 struct_declaration: . STRUCT identifier O_CURLY_BRACES declarations C_CURLY_BRACES var_decl
   18 functions: . func_definition
   19          | . functions func_definition
   20 func_definition: . var_type identifier O_ROUND_BRACES argument_list C_ROUND_BRACES O_CURLY_BRACES body C_CURLY_BRACES
   83 var_type: . VOID
   84         | . INT
   85         | . FLOAT
   86         | . CHAR
   87         | . STRUCT identifier

    VOID    shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    CHAR    shift, and go to state 4
    STRUCT  shift, and go to state 5

    program             go to state 6
    declarations        go to state 7
    declaration         go to state 8
    struct_declaration  go to state 9
    functions           go to state 10
    func_definition     go to state 11
    var_type            go to state 12


State 1

   83 var_type: VOID .

    $default  reduce using rule 83 (var_type)


State 2

   84 var_type: INT .

    $default  reduce using rule 84 (var_type)


State 3

   85 var_type: FLOAT .

    $default  reduce using rule 85 (var_type)


State 4

   86 var_type: CHAR .

    $default  reduce using rule 86 (var_type)


State 5

   12 struct_declaration: STRUCT . identifier O_CURLY_BRACES declarations C_CURLY_BRACES var_decl
   87 var_type: STRUCT . identifier
   88 identifier: . IDENTIFIER
   89           | . identifier O_SQUARE_BRACES ICONST C_SQUARE_BRACES
   90           | . identifier O_SQUARE_BRACES identifier C_SQUARE_BRACES
   91           | . identifier DOT identifier

    IDENTIFIER  shift, and go to state 13

    identifier  go to state 14


State 6

    0 $accept: program . $end

    $end  shift, and go to state 15


State 7

    2 program: declarations . functions
    4 declarations: declarations . declaration
    5 declaration: . var_type var_decl SEMICOLON
    6            | . struct_declaration SEMICOLON
   12 struct_declaration: . STRUCT identifier O_CURLY_BRACES declarations C_CURLY_BRACES var_decl
   18 functions: . func_definition
   19          | . functions func_definition
   20 func_definition: . var_type identifier O_ROUND_BRACES argument_list C_ROUND_BRACES O_CURLY_BRACES body C_CURLY_BRACES
   83 var_type: . VOID
   84         | . INT
   85         | . FLOAT
   86         | . CHAR
   87         | . STRUCT identifier

    VOID    shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    CHAR    shift, and go to state 4
    STRUCT  shift, and go to state 5

    declaration         go to state 16
    struct_declaration  go to state 9
    functions           go to state 17
    func_definition     go to state 11
    var_type            go to state 12


State 8

    3 declarations: declaration .

    $default  reduce using rule 3 (declarations)


State 9

    6 declaration: struct_declaration . SEMICOLON

    SEMICOLON  shift, and go to state 18


State 10

    1 program: functions .  [$end]
   19 functions: functions . func_definition
   20 func_definition: . var_type identifier O_ROUND_BRACES argument_list C_ROUND_BRACES O_CURLY_BRACES body C_CURLY_BRACES
   83 var_type: . VOID
   84         | . INT
   85         | . FLOAT
   86         | . CHAR
   87         | . STRUCT identifier

    VOID    shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    CHAR    shift, and go to state 4
    STRUCT  shift, and go to state 19

    $default  reduce using rule 1 (program)

    func_definition  go to state 20
    var_type         go to state 21


State 11

   18 functions: func_definition .

    $default  reduce using rule 18 (functions)


State 12

    5 declaration: var_type . var_decl SEMICOLON
    7 var_decl: . simple_declaration
    8         | . assignment
    9         | . var_decl COMMA var_decl
   10 simple_declaration: . %empty  [COMMA, SEMICOLON]
   11                   | . identifier
   20 func_definition: var_type . identifier O_ROUND_BRACES argument_list C_ROUND_BRACES O_CURLY_BRACES body C_CURLY_BRACES
   44 assignment: . identifier ASSIGN word
   45           | . identifier ASSIGN expr
   46           | . identifier ASSIGN O_CURLY_BRACES inizialization_list C_CURLY_BRACES
   47           | . identifier ASSIGN func_call
   88 identifier: . IDENTIFIER
   89           | . identifier O_SQUARE_BRACES ICONST C_SQUARE_BRACES
   90           | . identifier O_SQUARE_BRACES identifier C_SQUARE_BRACES
   91           | . identifier DOT identifier

    IDENTIFIER  shift, and go to state 13

    $default  reduce using rule 10 (simple_declaration)

    var_decl            go to state 22
    simple_declaration  go to state 23
    assignment          go to state 24
    identifier          go to state 25


State 13

   88 identifier: IDENTIFIER .

    $default  reduce using rule 88 (identifier)


State 14

   12 struct_declaration: STRUCT identifier . O_CURLY_BRACES declarations C_CURLY_BRACES var_decl
   87 var_type: STRUCT identifier .  [COMMA, SEMICOLON, IDENTIFIER]
   89 identifier: identifier . O_SQUARE_BRACES ICONST C_SQUARE_BRACES
   90           | identifier . O_SQUARE_BRACES identifier C_SQUARE_BRACES
   91           | identifier . DOT identifier

    O_CURLY_BRACES   shift, and go to state 26
    O_SQUARE_BRACES  shift, and go to state 27
    DOT              shift, and go to state 28

    $default  reduce using rule 87 (var_type)


State 15

    0 $accept: program $end .

    $default  accept


State 16

    4 declarations: declarations declaration .

    $default  reduce using rule 4 (declarations)


State 17

    2 program: declarations functions .  [$end]
   19 functions: functions . func_definition
   20 func_definition: . var_type identifier O_ROUND_BRACES argument_list C_ROUND_BRACES O_CURLY_BRACES body C_CURLY_BRACES
   83 var_type: . VOID
   84         | . INT
   85         | . FLOAT
   86         | . CHAR
   87         | . STRUCT identifier

    VOID    shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    CHAR    shift, and go to state 4
    STRUCT  shift, and go to state 19

    $default  reduce using rule 2 (program)

    func_definition  go to state 20
    var_type         go to state 21


State 18

    6 declaration: struct_declaration SEMICOLON .

    $default  reduce using rule 6 (declaration)


State 19

   87 var_type: STRUCT . identifier
   88 identifier: . IDENTIFIER
   89           | . identifier O_SQUARE_BRACES ICONST C_SQUARE_BRACES
   90           | . identifier O_SQUARE_BRACES identifier C_SQUARE_BRACES
   91           | . identifier DOT identifier

    IDENTIFIER  shift, and go to state 13

    identifier  go to state 29


State 20

   19 functions: functions func_definition .

    $default  reduce using rule 19 (functions)


State 21

   20 func_definition: var_type . identifier O_ROUND_BRACES argument_list C_ROUND_BRACES O_CURLY_BRACES body C_CURLY_BRACES
   88 identifier: . IDENTIFIER
   89           | . identifier O_SQUARE_BRACES ICONST C_SQUARE_BRACES
   90           | . identifier O_SQUARE_BRACES identifier C_SQUARE_BRACES
   91           | . identifier DOT identifier

    IDENTIFIER  shift, and go to state 13

    identifier  go to state 30


State 22

    5 declaration: var_type var_decl . SEMICOLON
    9 var_decl: var_decl . COMMA var_decl

    COMMA      shift, and go to state 31
    SEMICOLON  shift, and go to state 32


State 23

    7 var_decl: simple_declaration .

    $default  reduce using rule 7 (var_decl)


State 24

    8 var_decl: assignment .

    $default  reduce using rule 8 (var_decl)


State 25

   11 simple_declaration: identifier .  [COMMA, SEMICOLON]
   20 func_definition: var_type identifier . O_ROUND_BRACES argument_list C_ROUND_BRACES O_CURLY_BRACES body C_CURLY_BRACES
   44 assignment: identifier . ASSIGN word
   45           | identifier . ASSIGN expr
   46           | identifier . ASSIGN O_CURLY_BRACES inizialization_list C_CURLY_BRACES
   47           | identifier . ASSIGN func_call
   89 identifier: identifier . O_SQUARE_BRACES ICONST C_SQUARE_BRACES
   90           | identifier . O_SQUARE_BRACES identifier C_SQUARE_BRACES
   91           | identifier . DOT identifier

    O_SQUARE_BRACES  shift, and go to state 27
    O_ROUND_BRACES   shift, and go to state 33
    DOT              shift, and go to state 28
    ASSIGN           shift, and go to state 34

    $default  reduce using rule 11 (simple_declaration)


State 26

    3 declarations: . declaration
    4             | . declarations declaration
    5 declaration: . var_type var_decl SEMICOLON
    6            | . struct_declaration SEMICOLON
   12 struct_declaration: . STRUCT identifier O_CURLY_BRACES declarations C_CURLY_BRACES var_decl
   12                   | STRUCT identifier O_CURLY_BRACES . declarations C_CURLY_BRACES var_decl
   83 var_type: . VOID
   84         | . INT
   85         | . FLOAT
   86         | . CHAR
   87         | . STRUCT identifier

    VOID    shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    CHAR    shift, and go to state 4
    STRUCT  shift, and go to state 5

    declarations        go to state 35
    declaration         go to state 8
    struct_declaration  go to state 9
    var_type            go to state 36


State 27

   88 identifier: . IDENTIFIER
   89           | . identifier O_SQUARE_BRACES ICONST C_SQUARE_BRACES
   89           | identifier O_SQUARE_BRACES . ICONST C_SQUARE_BRACES
   90           | . identifier O_SQUARE_BRACES identifier C_SQUARE_BRACES
   90           | identifier O_SQUARE_BRACES . identifier C_SQUARE_BRACES
   91           | . identifier DOT identifier

    IDENTIFIER  shift, and go to state 13
    ICONST      shift, and go to state 37

    identifier  go to state 38


State 28

   88 identifier: . IDENTIFIER
   89           | . identifier O_SQUARE_BRACES ICONST C_SQUARE_BRACES
   90           | . identifier O_SQUARE_BRACES identifier C_SQUARE_BRACES
   91           | . identifier DOT identifier
   91           | identifier DOT . identifier

    IDENTIFIER  shift, and go to state 13

    identifier  go to state 39


State 29

   87 var_type: STRUCT identifier .  [IDENTIFIER]
   89 identifier: identifier . O_SQUARE_BRACES ICONST C_SQUARE_BRACES
   90           | identifier . O_SQUARE_BRACES identifier C_SQUARE_BRACES
   91           | identifier . DOT identifier

    O_SQUARE_BRACES  shift, and go to state 27
    DOT              shift, and go to state 28

    $default  reduce using rule 87 (var_type)


State 30

   20 func_definition: var_type identifier . O_ROUND_BRACES argument_list C_ROUND_BRACES O_CURLY_BRACES body C_CURLY_BRACES
   89 identifier: identifier . O_SQUARE_BRACES ICONST C_SQUARE_BRACES
   90           | identifier . O_SQUARE_BRACES identifier C_SQUARE_BRACES
   91           | identifier . DOT identifier

    O_SQUARE_BRACES  shift, and go to state 27
    O_ROUND_BRACES   shift, and go to state 33
    DOT              shift, and go to state 28


State 31

    7 var_decl: . simple_declaration
    8         | . assignment
    9         | . var_decl COMMA var_decl
    9         | var_decl COMMA . var_decl
   10 simple_declaration: . %empty  [COMMA, SEMICOLON]
   11                   | . identifier
   44 assignment: . identifier ASSIGN word
   45           | . identifier ASSIGN expr
   46           | . identifier ASSIGN O_CURLY_BRACES inizialization_list C_CURLY_BRACES
   47           | . identifier ASSIGN func_call
   88 identifier: . IDENTIFIER
   89           | . identifier O_SQUARE_BRACES ICONST C_SQUARE_BRACES
   90           | . identifier O_SQUARE_BRACES identifier C_SQUARE_BRACES
   91           | . identifier DOT identifier

    IDENTIFIER  shift, and go to state 13

    $default  reduce using rule 10 (simple_declaration)

    var_decl            go to state 40
    simple_declaration  go to state 23
    assignment          go to state 24
    identifier          go to state 41


State 32

    5 declaration: var_type var_decl SEMICOLON .

    $default  reduce using rule 5 (declaration)


State 33

   20 func_definition: var_type identifier O_ROUND_BRACES . argument_list C_ROUND_BRACES O_CURLY_BRACES body C_CURLY_BRACES
   21 argument_list: . %empty  [C_ROUND_BRACES]
   22              | . VOID
   23              | . parameter_list
   24 parameter_list: . parameter_declaration
   25               | . parameter_list COMMA parameter_declaration
   26 parameter_declaration: . var_type identifier
   83 var_type: . VOID
   84         | . INT
   85         | . FLOAT
   86         | . CHAR
   87         | . STRUCT identifier

    VOID    shift, and go to state 42
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    CHAR    shift, and go to state 4
    STRUCT  shift, and go to state 19

    $default  reduce using rule 21 (argument_list)

    argument_list          go to state 43
    parameter_list         go to state 44
    parameter_declaration  go to state 45
    var_type               go to state 46


State 34

   40 func_call: . identifier O_ROUND_BRACES call_args C_ROUND_BRACES
   44 assignment: identifier ASSIGN . word
   45           | identifier ASSIGN . expr
   46           | identifier ASSIGN . O_CURLY_BRACES inizialization_list C_CURLY_BRACES
   47           | identifier ASSIGN . func_call
   48 expr: . expr ADD expr
   49     | . expr SUB expr
   50     | . expr TIMES expr
   51     | . expr DIVIDE expr
   52     | . SUB expr
   53     | . increment
   54     | . expr EQOP expr
   55     | . expr RELOP expr
   56     | . expr AND expr
   57     | . expr OR expr
   58     | . NOT expr
   59     | . O_ROUND_BRACES expr C_ROUND_BRACES
   60     | . number
   61     | . identifier
   62 increment: . identifier INCR
   88 identifier: . IDENTIFIER
   89           | . identifier O_SQUARE_BRACES ICONST C_SQUARE_BRACES
   90           | . identifier O_SQUARE_BRACES identifier C_SQUARE_BRACES
   91           | . identifier DOT identifier
   95 word: . CCONST
   96     | . STRCONST
   97 number: . ICONST
   98       | . FCONST

    O_CURLY_BRACES  shift, and go to state 47
    O_ROUND_BRACES  shift, and go to state 48
    SUB             shift, and go to state 49
    NOT             shift, and go to state 50
    IDENTIFIER      shift, and go to state 13
    ICONST          shift, and go to state 51
    FCONST          shift, and go to state 52
    CCONST          shift, and go to state 53
    STRCONST        shift, and go to state 54

    func_call   go to state 55
    expr        go to state 56
    increment   go to state 57
    identifier  go to state 58
    word        go to state 59
    number      go to state 60


State 35

    4 declarations: declarations . declaration
    5 declaration: . var_type var_decl SEMICOLON
    6            | . struct_declaration SEMICOLON
   12 struct_declaration: . STRUCT identifier O_CURLY_BRACES declarations C_CURLY_BRACES var_decl
   12                   | STRUCT identifier O_CURLY_BRACES declarations . C_CURLY_BRACES var_decl
   83 var_type: . VOID
   84         | . INT
   85         | . FLOAT
   86         | . CHAR
   87         | . STRUCT identifier

    C_CURLY_BRACES  shift, and go to state 61
    VOID            shift, and go to state 1
    INT             shift, and go to state 2
    FLOAT           shift, and go to state 3
    CHAR            shift, and go to state 4
    STRUCT          shift, and go to state 5

    declaration         go to state 16
    struct_declaration  go to state 9
    var_type            go to state 36


State 36

    5 declaration: var_type . var_decl SEMICOLON
    7 var_decl: . simple_declaration
    8         | . assignment
    9         | . var_decl COMMA var_decl
   10 simple_declaration: . %empty  [COMMA, SEMICOLON]
   11                   | . identifier
   44 assignment: . identifier ASSIGN word
   45           | . identifier ASSIGN expr
   46           | . identifier ASSIGN O_CURLY_BRACES inizialization_list C_CURLY_BRACES
   47           | . identifier ASSIGN func_call
   88 identifier: . IDENTIFIER
   89           | . identifier O_SQUARE_BRACES ICONST C_SQUARE_BRACES
   90           | . identifier O_SQUARE_BRACES identifier C_SQUARE_BRACES
   91           | . identifier DOT identifier

    IDENTIFIER  shift, and go to state 13

    $default  reduce using rule 10 (simple_declaration)

    var_decl            go to state 22
    simple_declaration  go to state 23
    assignment          go to state 24
    identifier          go to state 41


State 37

   89 identifier: identifier O_SQUARE_BRACES ICONST . C_SQUARE_BRACES

    C_SQUARE_BRACES  shift, and go to state 62


State 38

   89 identifier: identifier . O_SQUARE_BRACES ICONST C_SQUARE_BRACES
   90           | identifier . O_SQUARE_BRACES identifier C_SQUARE_BRACES
   90           | identifier O_SQUARE_BRACES identifier . C_SQUARE_BRACES
   91           | identifier . DOT identifier

    O_SQUARE_BRACES  shift, and go to state 27
    C_SQUARE_BRACES  shift, and go to state 63
    DOT              shift, and go to state 28


State 39

   89 identifier: identifier . O_SQUARE_BRACES ICONST C_SQUARE_BRACES
   90           | identifier . O_SQUARE_BRACES identifier C_SQUARE_BRACES
   91           | identifier . DOT identifier
   91           | identifier DOT identifier .  [O_CURLY_BRACES, C_CURLY_BRACES, O_SQUARE_BRACES, C_SQUARE_BRACES, O_ROUND_BRACES, C_ROUND_BRACES, DOT, COMMA, SEMICOLON, ASSIGN, ADD, SUB, TIMES, DIVIDE, INCR, EQOP, RELOP, AND, OR, IDENTIFIER]

    $default  reduce using rule 91 (identifier)

    Conflict between rule 91 and token O_SQUARE_BRACES resolved as reduce (%left O_SQUARE_BRACES).
    Conflict between rule 91 and token DOT resolved as reduce (%left DOT).


State 40

    9 var_decl: var_decl . COMMA var_decl
    9         | var_decl COMMA var_decl .  [COMMA, SEMICOLON]

    $default  reduce using rule 9 (var_decl)

    Conflict between rule 9 and token COMMA resolved as reduce (%left COMMA).


State 41

   11 simple_declaration: identifier .  [COMMA, SEMICOLON]
   44 assignment: identifier . ASSIGN word
   45           | identifier . ASSIGN expr
   46           | identifier . ASSIGN O_CURLY_BRACES inizialization_list C_CURLY_BRACES
   47           | identifier . ASSIGN func_call
   89 identifier: identifier . O_SQUARE_BRACES ICONST C_SQUARE_BRACES
   90           | identifier . O_SQUARE_BRACES identifier C_SQUARE_BRACES
   91           | identifier . DOT identifier

    O_SQUARE_BRACES  shift, and go to state 27
    DOT              shift, and go to state 28
    ASSIGN           shift, and go to state 34

    $default  reduce using rule 11 (simple_declaration)


State 42

   22 argument_list: VOID .  [C_ROUND_BRACES]
   83 var_type: VOID .  [IDENTIFIER]

    IDENTIFIER  reduce using rule 83 (var_type)
    $default    reduce using rule 22 (argument_list)


State 43

   20 func_definition: var_type identifier O_ROUND_BRACES argument_list . C_ROUND_BRACES O_CURLY_BRACES body C_CURLY_BRACES

    C_ROUND_BRACES  shift, and go to state 64


State 44

   23 argument_list: parameter_list .  [C_ROUND_BRACES]
   25 parameter_list: parameter_list . COMMA parameter_declaration

    COMMA  shift, and go to state 65

    $default  reduce using rule 23 (argument_list)


State 45

   24 parameter_list: parameter_declaration .

    $default  reduce using rule 24 (parameter_list)


State 46

   26 parameter_declaration: var_type . identifier
   88 identifier: . IDENTIFIER
   89           | . identifier O_SQUARE_BRACES ICONST C_SQUARE_BRACES
   90           | . identifier O_SQUARE_BRACES identifier C_SQUARE_BRACES
   91           | . identifier DOT identifier

    IDENTIFIER  shift, and go to state 13

    identifier  go to state 66


State 47

   13 inizialization_list: . identifier
   14                    | . const
   15                    | . STRCONST
   16                    | . O_CURLY_BRACES inizialization_list COMMA inizialization_list C_CURLY_BRACES
   17                    | . inizialization_list COMMA inizialization_list
   46 assignment: identifier ASSIGN O_CURLY_BRACES . inizialization_list C_CURLY_BRACES
   88 identifier: . IDENTIFIER
   89           | . identifier O_SQUARE_BRACES ICONST C_SQUARE_BRACES
   90           | . identifier O_SQUARE_BRACES identifier C_SQUARE_BRACES
   91           | . identifier DOT identifier
   92 const: . ICONST
   93      | . FCONST
   94      | . CCONST

    O_CURLY_BRACES  shift, and go to state 67
    IDENTIFIER      shift, and go to state 13
    ICONST          shift, and go to state 68
    FCONST          shift, and go to state 69
    CCONST          shift, and go to state 70
    STRCONST        shift, and go to state 71

    inizialization_list  go to state 72
    identifier           go to state 73
    const                go to state 74


State 48

   48 expr: . expr ADD expr
   49     | . expr SUB expr
   50     | . expr TIMES expr
   51     | . expr DIVIDE expr
   52     | . SUB expr
   53     | . increment
   54     | . expr EQOP expr
   55     | . expr RELOP expr
   56     | . expr AND expr
   57     | . expr OR expr
   58     | . NOT expr
   59     | . O_ROUND_BRACES expr C_ROUND_BRACES
   59     | O_ROUND_BRACES . expr C_ROUND_BRACES
   60     | . number
   61     | . identifier
   62 increment: . identifier INCR
   88 identifier: . IDENTIFIER
   89           | . identifier O_SQUARE_BRACES ICONST C_SQUARE_BRACES
   90           | . identifier O_SQUARE_BRACES identifier C_SQUARE_BRACES
   91           | . identifier DOT identifier
   97 number: . ICONST
   98       | . FCONST

    O_ROUND_BRACES  shift, and go to state 48
    SUB             shift, and go to state 49
    NOT             shift, and go to state 50
    IDENTIFIER      shift, and go to state 13
    ICONST          shift, and go to state 51
    FCONST          shift, and go to state 52

    expr        go to state 75
    increment   go to state 57
    identifier  go to state 76
    number      go to state 60


State 49

   48 expr: . expr ADD expr
   49     | . expr SUB expr
   50     | . expr TIMES expr
   51     | . expr DIVIDE expr
   52     | . SUB expr
   52     | SUB . expr
   53     | . increment
   54     | . expr EQOP expr
   55     | . expr RELOP expr
   56     | . expr AND expr
   57     | . expr OR expr
   58     | . NOT expr
   59     | . O_ROUND_BRACES expr C_ROUND_BRACES
   60     | . number
   61     | . identifier
   62 increment: . identifier INCR
   88 identifier: . IDENTIFIER
   89           | . identifier O_SQUARE_BRACES ICONST C_SQUARE_BRACES
   90           | . identifier O_SQUARE_BRACES identifier C_SQUARE_BRACES
   91           | . identifier DOT identifier
   97 number: . ICONST
   98       | . FCONST

    O_ROUND_BRACES  shift, and go to state 48
    SUB             shift, and go to state 49
    NOT             shift, and go to state 50
    IDENTIFIER      shift, and go to state 13
    ICONST          shift, and go to state 51
    FCONST          shift, and go to state 52

    expr        go to state 77
    increment   go to state 57
    identifier  go to state 76
    number      go to state 60


State 50

   48 expr: . expr ADD expr
   49     | . expr SUB expr
   50     | . expr TIMES expr
   51     | . expr DIVIDE expr
   52     | . SUB expr
   53     | . increment
   54     | . expr EQOP expr
   55     | . expr RELOP expr
   56     | . expr AND expr
   57     | . expr OR expr
   58     | . NOT expr
   58     | NOT . expr
   59     | . O_ROUND_BRACES expr C_ROUND_BRACES
   60     | . number
   61     | . identifier
   62 increment: . identifier INCR
   88 identifier: . IDENTIFIER
   89           | . identifier O_SQUARE_BRACES ICONST C_SQUARE_BRACES
   90           | . identifier O_SQUARE_BRACES identifier C_SQUARE_BRACES
   91           | . identifier DOT identifier
   97 number: . ICONST
   98       | . FCONST

    O_ROUND_BRACES  shift, and go to state 48
    SUB             shift, and go to state 49
    NOT             shift, and go to state 50
    IDENTIFIER      shift, and go to state 13
    ICONST          shift, and go to state 51
    FCONST          shift, and go to state 52

    expr        go to state 78
    increment   go to state 57
    identifier  go to state 76
    number      go to state 60


State 51

   97 number: ICONST .

    $default  reduce using rule 97 (number)


State 52

   98 number: FCONST .

    $default  reduce using rule 98 (number)


State 53

   95 word: CCONST .

    $default  reduce using rule 95 (word)


State 54

   96 word: STRCONST .

    $default  reduce using rule 96 (word)


State 55

   47 assignment: identifier ASSIGN func_call .

    $default  reduce using rule 47 (assignment)


State 56

   45 assignment: identifier ASSIGN expr .  [COMMA, SEMICOLON]
   48 expr: expr . ADD expr
   49     | expr . SUB expr
   50     | expr . TIMES expr
   51     | expr . DIVIDE expr
   54     | expr . EQOP expr
   55     | expr . RELOP expr
   56     | expr . AND expr
   57     | expr . OR expr

    ADD     shift, and go to state 79
    SUB     shift, and go to state 80
    TIMES   shift, and go to state 81
    DIVIDE  shift, and go to state 82
    EQOP    shift, and go to state 83
    RELOP   shift, and go to state 84
    AND     shift, and go to state 85
    OR      shift, and go to state 86

    $default  reduce using rule 45 (assignment)


State 57

   53 expr: increment .

    $default  reduce using rule 53 (expr)


State 58

   40 func_call: identifier . O_ROUND_BRACES call_args C_ROUND_BRACES
   61 expr: identifier .  [COMMA, SEMICOLON, ADD, SUB, TIMES, DIVIDE, EQOP, RELOP, AND, OR]
   62 increment: identifier . INCR
   89 identifier: identifier . O_SQUARE_BRACES ICONST C_SQUARE_BRACES
   90           | identifier . O_SQUARE_BRACES identifier C_SQUARE_BRACES
   91           | identifier . DOT identifier

    O_SQUARE_BRACES  shift, and go to state 27
    O_ROUND_BRACES   shift, and go to state 87
    DOT              shift, and go to state 28
    INCR             shift, and go to state 88

    $default  reduce using rule 61 (expr)


State 59

   44 assignment: identifier ASSIGN word .

    $default  reduce using rule 44 (assignment)


State 60

   60 expr: number .

    $default  reduce using rule 60 (expr)


State 61
